# 22B

./: .gitattributes  .gitignore  README.md  deploy.sh  environment.yml  pyproject.toml  requirements.txt
configs/: rtx3090.yaml
scripts/: bootstrap_runpod.sh
src/v2v_rt/: __init__.py  config.py  main_infer.py  types.py
src/v2v_rt/compression/: __init__.py  tiny_vae.py
src/v2v_rt/control/: __init__.py  controlnet_xs.py
src/v2v_rt/egress/: __init__.py  frame_sink.py
src/v2v_rt/generation/: __init__.py  causal_dit.py  flashinfer_attention.py
src/v2v_rt/ingest/: __init__.py  frame_source.py  websocket_source.py
src/v2v_rt/orchestration/: __init__.py  pipeline.py  scheduler.py
tests/: test_config.py  test_scheduler.py  test_websocket_source.py
